--- a/desafios/modulo-02/d012/estilo.css
+++ b/desafios/modulo-02/d012/estilo.css
@@ -2,6 +2,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Passion+One&display=swap');
 
+        * {
+            margin: 0px;
+            padding: 0px;
+        }
+
         body{
             height: 98vh;
             margin: 0%;
@@ -10,6 +15,15 @@
         p{
             color: #fff;
             font-family: Arial, Helvetica, sans-serif;
+        }
+
+        a{
+            color: #fff;
+            font-weight: bolder;
+
+        }
+        a:hover{
+            color: #888;
         }
 
         header,footer{
